--- a/projectfinale/package.json
+++ b/projectfinale/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectfinale",
+  "name": "project-finale",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.12.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "web-vitals": "^0.2.4"
   },
